# openmatrix-docs

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/: CODE_of_conduct.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.openmatrix/: promotion-report.md  social-media-content.md  state.json
.openmatrix/approvals/: APR-001.json
autonomous-agent/: .gitignore  Cargo.toml  README.md
autonomous-agent/src/: executor.rs  goals.rs  main.rs  memory.rs  updater.rs
autonomous-agent/src/llm/: claude.rs  local.rs  mod.rs  openai.rs  provider.rs  types.rs
autonomous-agent/src/promotion/: analytics.rs  community.rs  content.rs  mod.rs  publisher.rs  types.rs
autonomous-agent/src/proxy/: mod.rs  types.rs
autonomous-agent/src/tasks/: executor.rs  mod.rs  planner.rs  types.rs
brand/: BRAND_STRATEGY.md  VISUAL_GUIDE.md
content/blog/: openmatrix-architecture-design.md  openmatrix-v0.1.58-update.md  openmatrix-v0.2.16-update.md  openmatrix-v0.2.17-v0.2.19-routing-update.md  openmatrix-v0.2.20-test-command.md  openmatrix-v0.2.21-intent-driven.md  openmatrix-v0.2.22-task-blocking.md  (+2 more)
deploy/: Caddyfile  DEPLOYMENT_GUIDE.md  README.md  deploy-wsl.sh  deploy.sh  docker-compose.yml  frpc.ini  nginx.conf
github/: CODE_of_conDUCT.md  CONTRIBUTING.md
scaffolds/: README.md
tests/: e2e.test.js
website/: index.html  main.js  robots.txt  sitemap.xml  styles.css
(+65 files in other folders)
